--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>NASA Meets React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -34,5 +34,21 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <header>
+      <h1>NASA's Photo of the Day</h1>
+    </header>
+
+    <div class='mainImg'>
+
+    </div>
+
+    <div class='simpleInfo'>
+
+    </div>
+
+    <footer>
+      <p>Gris Builds A Thing!</p>
+    </footer>
   </body>
 </html>
